--- a/Gmail.html
+++ b/Gmail.html
@@ -72,45 +72,41 @@
                         <thead><th id="inbox"><input type="image" src="./images/primary.png" align="middle">Primary</th><td><input type="image" src="./images/social.png" align="middle"</td>
                         </thead>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
-                                </tr>
-                                <tr>
-                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Firebase</td>
-                                    <td>Welcome to Firebase! You are now part of a growing community of hundreds of thousands of developers</td><td>6 Aug</td>
-                                </tr>
+                                    <td><input type="checkbox"><input type="image" src="./images/star.png"> Google</td>
+                                    <td><b>New sign-in from Chrome on Windows</b> Hi syed,Your Google Account syedharis49@gmail.com was just used to sign in from Chrome on Windows.	</td><td>6 Aug</td>
+                               
                     </table>
                 </div>
         </body>
